fixed page overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,3 +258,6 @@ i {
   margin: 0 auto;
   text-align: center;
 }
+
+.other-div {
+}
